2002-03-24  Richard Williamson  <rjw@apple.com>

        Changed data source to create IFURLHandle of the appropriate class.
        The prevented us from getting the response headers correctly.
        
	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSource _startLoading:]):

2002-03-24  Richard Williamson  <rjw@apple.com>

        Removed erroneous comments.
        
	* WebView.subproj/IFWebView.mm: (-[IFWebView dataSourceChanged:]), (-[IFWebView
	reapplyStyles]):

2002-03-22  Chris Blumenberg  <cblu@apple.com>

	* MIME.subproj/IFMIMEDatabase.h:
	Added a list of mime type that WebKit will be capable of handling

2002-03-22  Chris Blumenberg  <cblu@apple.com>

	* WebKit.pbproj/project.pbxproj:
	Added the MIME clases to WebKit.

2002-03-22  John Sullivan  <sullivan@apple.com>

	* WebView.subproj/IFWebView.mm: (-[IFWebView reapplyStyles]):
	Removed stale FIXME.

2002-03-22  Richard Williamson  <rjw@apple.com>

        Fixed reapplyStyles to use new KDE3 recalcStyle function.
        
	* WebView.subproj/IFWebView.mm: (-[IFWebView reapplyStyles])

2002-03-21  John Sullivan  <sullivan@apple.com>

	* WebView.subproj/IFWebView.mm: (-[IFWebView reapplyStyles]):
	Commented out call to applyChanges that no longer exists.
	This was breaking the build. Live font changes are
	temporarily broken again.

2002-03-21  Richard Williamson  <rjw@apple.com>

        Added setNeedsToApplyStyles: and reapplyStyles.  This is for dynamic preferences
        refresh support.
        
	* WebView.subproj/IFWebView.h:
	* WebView.subproj/IFWebView.mm: (-[IFWebView reapplyStyles]), (-[IFWebView
	layout]), (-[IFWebView setNeedsToApplyStyles:]), (-[IFWebView drawRect:]):
	* WebView.subproj/IFWebViewPrivate.h:

2002-03-21  John Sullivan  <sullivan@apple.com>

	Cleaned up defaults registration and use. The class
	IFPreferences now registers the defaults at load time, early
	enough that Alexander doesn't have to register them separately